src_old/objects/SurveyPhotoViewerSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AIImageURL__c</fullName>
        <label>AIImageURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudinaryImageURL__c</fullName>
        <label>CloudinaryImageURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudinaryKey__c</fullName>
        <label>Cloudinary Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudinaryThumbnailURL__c</fullName>
        <label>CloudinaryThumbnailURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Iv__c</fullName>
        <label>Iv</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <label>Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Survey Photo Viewer</label>
</CustomObject>